--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -6,6 +6,10 @@
   - firstname: ["Wei", "W."]
     url: https://www.cs.umb.edu/~ding/
 
+"Chen": 
+  - firstname: ["Ping", "P."]
+    url: https://www.cs.umb.edu/~pchen/
+
 "Morabito": 
   - firstname: ["Melissa S.", "Melissa"]
     url:  https://www.uml.edu/fahss/criminal-justice/faculty/morabito-melissa.aspx
