--- a/_config.yml
+++ b/_config.yml
@@ -2,17 +2,17 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: The Knowledge Discovery Lab (KDLab) # the website title (if blank, full name will be used instead)
 first_name: Yong
 middle_name: 
 last_name: Zhuang
-email: yong.zhuang001@umb.edu
+email: #yong.zhuang001@umb.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
 
 icon: 💹 # the emoji used as the favicon
-url: https://yong-zhuang.github.io # the base hostname & protocol for your site
+url: https://kdl-umb.github.io # the base hostname & protocol for your site
 baseurl: #/al-folio # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
@@ -46,11 +46,11 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: Yong-Zhuang # your GitHub user name
+github_username: #KDL-UMB # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
-linkedin_username: yong-zhuang-b1847a114 # your LinkedIn user name
-scholar_userid: Yong Zhuang # your Google Scholar ID
+linkedin_username: # your LinkedIn user name
+scholar_userid: # your Google Scholar ID
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
@@ -82,7 +82,7 @@ pagination:
   enabled: true
 
 # Comments
-disqus_shortname: yong-z # put your disqus shortname
+disqus_shortname: #yong-z # put your disqus shortname
 # https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 # -----------------------------------------------------------------------------
