--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Lab
 email: #yong.zhuang001@umb.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  The website of KDLab.
 footer_text: >
 
 icon: 🖥️ # the emoji used as the favicon
