--- a/_config.yml
+++ b/_config.yml
@@ -104,6 +104,9 @@ collections:
   teaching:
     output: true
     permalink: /teaching/:path/
+  members:
+    output: true
+    permalink: /members/:path/
 
 news_limit: 5
 
