update kevin&zihan in news and Lab director of wei ding

--- a/_config.yml
+++ b/_config.yml
@@ -113,6 +113,9 @@ collections:
   membersGrad:
     output: true
     permalink: /membersGrad/:path/
+  membersDir:
+    output: true
+    permalink: /membersDir/:path/
   wins:
     defaults:
       layout: post
