author info update

--- a/_config.yml
+++ b/_config.yml
@@ -199,8 +199,8 @@ jekyll-archives:
 
 scholar:
 
-  last_name: Zhuang
-  first_name: [Yong]
+  last_name: UMB
+  first_name: [KDL]
 
   style: apa
   locale: en
